<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>space_panda_bringup</name>
  <version>0.0.1</version>
  <description>Package with launch files and run-time configurations for using Franka Emika Panda for the Space Panda project</description>
  <maintainer email="alexander@minor.pw">Alexander Minor</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>space_panda_description</depend>
  <depend>space_panda_controller</depend>
  <depend>franka_hardware</depend>
  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <depend>controller_manager</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>rviz2</depend>
  <depend>xacro</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
